# director

./: .gitignore  .repomixignore  AGENTS.md  Cargo.toml  DIAGNOSTIC_REPORT.md  DOCS_INDEX.md  Drust-skia-engineLOTTIE_FIXES_SUMMARY.md  EMERGENCY_FIX_SUMMARY.md  LOTTIE_FIXES_SUMMARY.md  LOTTIE_SPEC_AUDIT_REPORT.md  README.md  analyze_scale.py  compare_renders.py  setup_assets.sh  taffy_test.rs  test_heart_eyes_render.rs  test_trim.sh  verify_trim.py
.director-dev/: pipeline_capabilities.json  rhai_api.json  schemas.json
.grits/: focus  issues.jsonl  issues_backup_20260126_225754.jsonl
check_taffy/: Cargo.toml
crates/director-cli/: Cargo.toml
crates/director-cli/src/: main.rs
crates/director-developer/: Cargo.toml  README.md
crates/director-developer/examples/: glow_effect.ron
crates/director-developer/prompts/: add_rhai_function.prompt  debug_animation.prompt  extend_schema.prompt  implement_effect.prompt  implement_node.prompt
crates/director-developer/src/: main.rs  prompts.rs  spec.rs  synthesizer.rs  tests.rs  watch.rs
crates/director-developer/src/reflectors/: graph.rs  mod.rs  pipeline.rs  schema.rs  scripting.rs
crates/director-view/: Cargo.toml
crates/director-view/frontend/: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
crates/director-view/frontend/src/: App.tsx
crates/director-view/frontend/src/api/: director.ts
crates/director-view/frontend/src/components/: Controls.tsx  Preview.tsx  ScriptEditor.tsx  Timeline.tsx  index.ts
crates/director-view/frontend/src/stores/: project.ts
crates/director-view/frontend/src/styles/: globals.css
crates/director-view/src/: main.rs
crates/director-view/static/: index.html
director/: Cargo.toml  README.md
docs/: README.md  ROADMAP.md  engine_audit_2026_01.md
examples/: cinematic_showcase.rhai  complex_preview.rhai  debug_showcase.rhai  manual_save_test.rhai  preview_test.rhai  verification_test.rhai  vfx_showcase.rhai
plans/: director-view-frontend.md
skill-example/: story.rhai
specs/: path_animation_optimization.ron  sksl_transitions_expansion.ron
src/: animation.rs  audio.rs  director.rs  element.rs  layout.rs  lib.rs  main.rs  node.rs  render.rs  scripting.rs  shaders.rs  tokens.rs  (+1 more)
(+165 files in other folders)
