[package]
name = "director-developer"
version = "0.1.0"
edition = "2021"
description = "Spec-Driven Development harness for Director workspace"
license = "MIT"

[dependencies]
# Workspace crates for introspection
director-core = { path = "../director-core" }
director-schema = { path = "../director-schema" }
director-pipeline = { path = "../director-pipeline" }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = { workspace = true }
schemars = { workspace = true }

# Rhai for Engine type
rhai = { version = "1.23.6", features = ["metadata"] }

# File watching
notify = "6"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "director-dev"
path = "src/main.rs"
