[package]
name = "director-view"
version = "0.1.0"
edition = "2021"

[dependencies]
director-core = { path = "../director-core" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
skia-safe = "0.90.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rhai = "1.23.6"
tempfile = "3.14"
